<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="xyz.emlyn.snapnote.ui.newnote.NewNoteFragment"
        android:label="@string/title_newnote"
        tools:layout="@layout/fragment_newnote" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="xyz.emlyn.snapnote.ui.allnotes.AllNotesFragment"
        android:label="@string/title_allnotes"
        tools:layout="@layout/fragment_allnotes" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="xyz.emlyn.snapnote.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>